# cpp-project-template

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: @Project_Name@Boilerplate.cmake  @Project_Name@External.cmake  @Project_Name@Folders.cmake  FindFilesystem.cmake  GazeboBoilerplate.cmake  GazeboExternal.cmake  GazeboFolders.cmake  UseColors.cmake  Warnings.cmake
misc/: bootstrap.py
src/: CMakeLists.txt
src/@project_name@/: CMakeLists.txt  disable_warnings.h  enable_warnings.h  filesystem.h
src/gazebo/: CMakeLists.txt  filesystem.h
src/viewer/: CMakeLists.txt  filedialogs.cpp  filedialogs.h  main.cpp  viewer.cpp
tests/: CMakeLists.txt  test_fibonacci.cpp
